--- a/_includes/about.html
+++ b/_includes/about.html
@@ -62,7 +62,7 @@
                                     <h4 class="subheading">Upahar Sood</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">The person who help me to get deep into this field.</p>
+                                    <p class="text-muted">The person who helps me to get deep into this field.</p>
                                 </div>
                             </div>
                         </li>
