--- a/_includes/js.html
+++ b/_includes/js.html
@@ -15,3 +15,9 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="{{ "/js/agency.js" | prepend: site.baseurl }}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.3.0/js/mdb.min.js"></script>
+     <script>
+         
+new WOW().init();
+
+     </script>
