changes commited again

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -11,7 +11,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-laptop fa-stack-1x fa-inverse wow zoomInUp"></i>
                     </span>
                     <h4 class="service-heading">Front-End Development</h4>
                     <p class="text-muted">Front-end web development for a website or Web Application so that user can see and interact with them directly(Still Learning) </p>
@@ -19,7 +19,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-code fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-code fa-stack-1x fa-inverse wow zoomInUp"></i>
                     </span>
                     <h4 class="service-heading">Back-End Development</h4>
                     <p class="text-muted">Back-end development for a website or web application to make some calculations according to users profile(still learning) </p>
@@ -27,7 +27,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-mobile fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-mobile fa-stack-1x fa-inverse wow zoomInUp"></i>
                     </span>
                     <h4 class="service-heading">App Development</h4>
                     <p class="text-muted">End-to-End Development to make web applications and mobile applications using JAVA and Android (still learning)</p>
