--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,7 +3,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact</h2>
-                    <h3 class="section-subheading text-muted">Contact Me On Following Links</h3>
+                    <h3 class="section-subheading text-muted">Contact Me On Following Links.</h3>
                 </div>
             </div>
 
