fixed the errors

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,5 +1,5 @@
 <!-- About Section -->
-    <section id="about" class="wow slideInLeft">
+    <section id="about" class="">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -11,58 +11,58 @@
                 <div class="col-lg-12">
                     <ul class="timeline">
                         <li>
-                            <div class="timeline-image">
+                            <div class="timeline-image wow zoomInUp">
                                 <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2012-2016</h4>
+                                    <h4 class="subheading">2012-2016</h4> 
                                     <h4 class="subheading">My Beginning with Computer Engineering</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">I studied Computer Engineering at Mumbai University!</p>
+                                    <p class="text-muted desc">I studied Computer Engineering at Mumbai University!</p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
-                            <div class="timeline-image">
+                            <div class="timeline-image wow zoomInUp">
                                 <img class="img-circle img-responsive" src="img/about/2.png" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>June 2016</h4>
+                                    <h4 class="subheading">June 2016</h4>
                                     <h4 class="subheading">Hyderabad</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">I went to Hyderabad. Take a course on JAVA Development.</p>
+                                    <p class="text-muted desc">I went to Hyderabad. Take a course on JAVA Development.</p>
                                 </div>
                             </div>
                         </li>
                         <li>
-                            <div class="timeline-image">
+                            <div class="timeline-image wow zoomInUp">
                                 <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>October 2016</h4>
+                                    <h4 class="subheading">October 2016</h4>
                                     <h4 class="subheading">OF10</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Started Learning Front-End Development at OF10.</p>
+                                    <p class="text-muted desc">Started Learning Front-End Development at OF10.</p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
-                            <div class="timeline-image">
+                            <div class="timeline-image wow zoomInUp">
                                 <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Thanks To</h4>
+                                    <h4 class="subheading">Thanks To</h4>
                                     <h4 class="subheading">Upahar Sood</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">The person who helps me to get deep into this field.</p>
+                                    <p class="text-muted desc">The person who helps me to get deep into this field.</p>
                                 </div>
                             </div>
                         </li>
