MAde some changes on animations

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
                     <span class="copyright">Copyright &copy; {{ site.title }} {{ 'now' | date: "%Y" }}</span>
                 </div>
                 <div class="col-md-4">
-                    <ul class="list-inline social-buttons wow slideInUp">
+                    <ul class="list-inline social-buttons wow zoomInUp">
                         {% for network in site.social %}
                         <li><a href="{{ network.url }}"><i class="fa fa-{{ network.title }}"></i></a>
                         </li>
@@ -13,7 +13,7 @@
                     </ul>
                 </div>
                 <div class="col-md-4">
-                    <ul class="list-inline quicklinks wow slideInRight">
+                    <ul class="list-inline quicklinks">
                         <li><a href="#">Privacy Policy</a>
                         </li>
                         <li><a href="#">Terms of Use</a>
