--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,7 +1,7 @@
-<section id="contact" class="wow slideInRight">
+<section id="contact" class="">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <div class="col-lg-12 text-center wow slideInLeft">
                     <h2 class="section-heading">Contact</h2>
                     <h3 class="section-subheading text-muted">Contact Me On Following Links.</h3>
                 </div>
