Remove the comment

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -62,17 +62,17 @@
                                     <h4 class="subheading">Upahar Sood</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted desc">The person who helps me to get deep into this field.</p>
+                                    <p class="text-muted desc">The person who helps me to get deep in this field.</p>
                                 </div>
                             </div>
                         </li>
-                        <!--li class="timeline-inverted">
+                        <li class="timeline-inverted">
                             <div class="timeline-image">
                                 <h4>Be Part
                                     <br>Of My
                                     <br>Story!</h4>
                             </div>
-                        </li-->
+                        </li>
                     </ul>
                 </div>
             </div>
