--- a/_includes/about.html
+++ b/_includes/about.html
@@ -67,7 +67,7 @@
                             </div>
                         </li>
                         <li class="timeline-inverted">
-                            <div class="timeline-image">
+                            <div class="timeline-image wow zoomInUp">
                                 <h4>Be Part
                                     <br>Of My
                                     <br>Story!</h4>
